--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <link rel="shortcut icon" href="TM Logo-071.png" />
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
-    rel="stylesheet"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+  <script src="https://kit.fontawesome.com/77b2f8c3f6.js" crossorigin="anonymous"></script>
   <!-- CSS Implementing Plugins -->
   <link
     rel="stylesheet"
@@ -4004,7 +4002,7 @@
                   <div
                     class="d-flex justify-content-beekeen align-items-center mb-2"
                   >
-                    <span class="">Available: <strong>6</strong></span>
+                    <span class="">Available: <strong>6 </strong></span>
                     <span class="">Already Sold: <strong>28</strong></span>
                   </div>
                   <div
@@ -5825,7 +5823,7 @@
                       class="btn font-size-20 btn-icon btn-soft-dark btn-bg-transparent rounded-circle"
                       href="#"
                     >
-                      <span class="fab fa-ekitter btn-icon__inner"></span>
+                      <span class="fab fa-twitter btn-icon__inner"></span>
                     </a>
                   </li>
                   <li class="list-inline-item mr-0">
