--- a/index.html
+++ b/index.html
@@ -5648,7 +5648,7 @@
             <div class="col-lg-7 mb-md-3 mb-lg-0">
               <div class="row align-items-center">
                 <div class="col-auto flex-horizontal-center">
-                  <i class="ec ec-newsletter font-size-40"></i>
+                  <i class="fa-regular fa-envelope "></i>
                   <h2 class="font-size-20 mb-0 ml-3">Sign up to Newsletter</h2>
                 </div>
                 <div class="col my-4 my-md-0">
@@ -5695,7 +5695,7 @@
       </div>
       <!-- End Footer-newsletter -->
       <!-- Footer-bottom-widgets -->
-      <div class="pt-8 pb-4 bg-gray-13">
+      <div class="pt-4 pb-4 bg-gray-13">
         <div class="container mt-1">
           <div class="row">
             <div class="col-lg-5">
