--- a/index.html
+++ b/index.html
@@ -5987,7 +5987,7 @@
               <a href="#" class="font-weight-bold text-gray-90"
                 >Electronickart</a
               >
-              - All rights Reserved
+              - All rights Reserved &nbsp; 
             </div>
             <div class="text-md-right">
               <span class="d-inline-block bg-white border rounded p-1">
