--- a/index.html
+++ b/index.html
@@ -5981,7 +5981,7 @@
       <!-- Footer-copy-right -->
       <div class="bg-gray-14 py-2">
         <div class="container">
-          <div class="flex-center-beekeen d-block d-md-flex">
+          <div class="flex-center-between d-block d-md-flex">
             <div class="mb-3 mb-md-0">
               ©
               <a href="#" class="font-weight-bold text-gray-90"
