--- a/index.html
+++ b/index.html
@@ -441,14 +441,10 @@
                         </ul>
 
                         <!-- SVG Background Shape -->
-                        <div
-                          class="position-absolute right-0 bottom-0 left-0 z-index-n1"
-                        >
+                        <!-- <div  class="position-absolute right-0 bottom-0 left-0 z-index-n1">
                           <img
-                            class="js-svg-injector"
-                            src="assets/svg/components/wave-bottom-with-dots.svg"
-                            alt="Image Description"
-                            data-parent="#SVGwaveWithDots"
+                            class="js-svg-injector"  src="assets/svg/components/wave-bottom-with-dots.svg"
+                            alt="Image Description"  data-parent="#SVGwaveWithDots"
                           />
                         </div>
                         <!-- End SVG Background Shape -->
